team-detailPage added

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,6 +1,7 @@
 
 <div class="card card-task">
     <app-progress-bar 
+      *ngIf="isVisible"
       class="progress" 
       [percentage]="percentage"
       [isColorChanged]="false">
