--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -7,6 +7,7 @@
         [title]="project.name"
         [dueDate]="project.dueDate | dueDate"
         [percentage]="project.percentage"
+        [isVisible]="true"
         >    
     </app-project-card>
 </div>
