--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,4 +1,3 @@
-
 <div class="card card-task">
     <app-progress-bar 
       *ngIf="isVisible"
@@ -10,6 +9,7 @@
     <div class="card-body">
       <div class="card-title">
         <h5>{{ title }}</h5>
+        <ng-content></ng-content>
         <span>Due on {{ dueDate }}</span>
       </div>
     </div>
