--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -10,7 +10,7 @@
       <div class="card-title">
         <h5>{{ title }}</h5>
         <ng-content></ng-content>
-        <span>Due on {{ dueDate }}</span>
+        <span>{{ dueDate }}</span>
       </div>
     </div>
 </div>
