--- a/src/app/components/tasks-card/tasks-card.component.html
+++ b/src/app/components/tasks-card/tasks-card.component.html
@@ -9,7 +9,7 @@
     <div class="card-body">
         <div class="card-title">
             <h5 class="card-title">{{ title }}</h5>
-            <span class="text-small">Due on {{ dueDate | dueDate}}</span>
+            <span class="text-small">{{ dueDate }}</span>
         </div>
         <div class="card-meta">
 
