--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -5,7 +5,7 @@
         class="col-lg-6" 
         *ngFor="let project of projects$ | async"
         [title]="project.name"
-        [dueDate]="project.dueDate | dueDate"
+        [dueDate]="project.dueDate | dueDate: 'fullDate'"
         [percentage]="project.percentage"
         [isVisible]="true"
         >    
