navigation logic added

--- a/src/app/components/main-continer/main-continer.component.html
+++ b/src/app/components/main-continer/main-continer.component.html
@@ -1,26 +1,15 @@
 <div class="layout layout-nav-side">
     <div class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
-
         <a class="navbar-brand">
           <img alt="Pipeline" src="assets/img/logo.svg">
         </a>
         <div class="d-flex align-items-center">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="true" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation" (click)="onMenuButtonClicked()" >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- <div class="d-block d-lg-none ml-2">
-            <div class="dropdown">
-              <div class="dropdown-menu dropdown-menu-right">
-                <a href="nav-side-user.html" class="dropdown-item">Profile</a>
-                <a href="utility-account-settings.html" class="dropdown-item">Account Settings</a>
-                <a href="#" class="dropdown-item">Log Out</a>
-              </div>
-            </div>
-          </div> -->
         </div>
-        <!-- show -->
-        <div class="navbar-collapse flex-column collapse" id="navbar-collapse" >
-          <ul class="navbar-nav d-lg-block">
+        <div [isCLicked]="(isClicked$ | async)!" class="navbar-collapse flex-column collapse " id="navbar-collapse" >
+          <ul class="navbar-nav d-sm-flex row">
             <li class="nav-item">
               <a class="nav-link" [routerLink]="'/'">Home</a>
             </li>
@@ -39,12 +28,9 @@
           </ul>
           <hr>
         </div>
-    
-
       </div>
 
     <div class="main-container">
-
         <div class="navbar bg-white breadcrumb-bar">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
