--- a/src/app/components/tabset/tabset.component.html
+++ b/src/app/components/tabset/tabset.component.html
@@ -5,7 +5,25 @@
       role="tab" 
       aria-controls="projects" 
       aria-selected="true"
-      [appTabset]="isActive"
+      (click)="onCliked(title)"
+     [ngStyle]="{cursor: 'pointer'}"
+     [ngClass]="{active: title===categoryTitle}"
       >{{title}}</a>
     </li>
   </ul>
+
+  <!-- <ul  
+  class="nav nav-tabs nav-fill" 
+  role="tablist">
+  <li *ngFor="let title of title$ | async" class="nav-item">
+    <a class="nav-link" 
+    data-toggle="tab" 
+    role="tab" 
+    aria-controls="projects" 
+    aria-selected="true"
+    (click)="onCliked(title)"
+    [ngStyle]="{cursor: 'pointer'}"
+    [ngClass]="{active: title===categoryTitle}"
+     >{{title}} </a>
+  </li>
+</ul> -->
