--- a/src/app/components/team-detail/team-detail.component.html
+++ b/src/app/components/team-detail/team-detail.component.html
@@ -11,8 +11,7 @@
 
 <app-tabset 
     [tabsetTitle]="(title$ | async)!"
-    [categoryTitle]="'Project'"
->
+    [categoryTitle]="'Project'">
 </app-tabset>
 
 <div class="tab-content mt-3">
