--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,16 +1,19 @@
-<div class="card card-task">
-    <app-progress-bar 
-      *ngIf="isVisible"
-      class="progress" 
-      [percentage]="percentage"
-      [isColorChanged]="false">
-    </app-progress-bar>
+<div class="card card-project">
+  <app-progress-bar 
+    *ngIf="isVisible" 
+    class="progress" 
+    [percentage]="percentage" 
+    [isColorChanged]="false">
+  </app-progress-bar>
 
-    <div class="card-body">
-      <div class="card-title">
-        <h5>{{ title }}</h5>
-        <ng-content></ng-content>
-        <span>{{ dueDate }}</span>
-      </div>
+  <div class="card-body">
+    <div class="card-title">
+      <h5>{{ title }}</h5>
     </div>
+
+    <div class="card-meta d-flex justify-content-between">
+      <ng-content></ng-content>
+      <span>{{ dueDate }}</span>
+    </div>
+  </div>
 </div>
