--- a/src/app/components/team-detail/team-detail.component.html
+++ b/src/app/components/team-detail/team-detail.component.html
@@ -11,7 +11,7 @@
 
 <app-tabset 
     [tabsetTitle]="(title$ | async)!"
-    [categoryTitle]="'Project'">
+    [categoryTitle]="'Projects'">
 </app-tabset>
 
 <div class="tab-content mt-3">
@@ -30,7 +30,7 @@
                 [percentage]="project.percentage"
                 [isVisible]="false"
                 >    
-                
+                <br br>
             </app-project-card>
         </div>
     </div>
