--- a/src/app/components/main-continer/main-continer.component.html
+++ b/src/app/components/main-continer/main-continer.component.html
@@ -34,7 +34,7 @@
         <div class="navbar bg-white breadcrumb-bar">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a>
+                <li class="breadcrumb-item"><a [routerLink]="'/'">Home</a>
               </li>
             </ol>
           </nav>
